--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin-left: 20%;
+  margin-right: 20%;
   padding: 2rem;
-  text-align: center;
 }
 
-.read-the-docs {
-  color: #888;
+.sticky-nav {
+  position: sticky;
+  top: 0;
 }
